<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp"
                    android:text="MyCSUDH CSC"
                    android:id="@+id/titleText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:fontFamily="serif-bold"
                    android:text="v1.0"
                    android:id="@+id/versionText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/about_text1"
                    android:id="@+id/bodyText1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:autoLink="web"
                    android:clickable="true"
                    android:text="@string/about_text2"
                    android:id="@+id/bodyText2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:autoLink="web"
                    android:clickable="true"
                    android:text="@string/about_text3"
                    android:id="@+id/bodyText3" />

                <TextView
                    android:id="@+id/bodyText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:autoLink="web"
                    android:clickable="true"
                    android:text="@string/about_text4" />

                <TextView
                    android:id="@+id/bodyText5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/about_text5" />

                <TextView
                    android:id="@+id/bodyText6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/about_text6" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>


